2006-06-24  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.(cc|h): Use error codes for logging in
	addition to thrown exceptions.

	* sbuild/sbuild-chroot-config.(cc|h): Use error codes for logging
	in addition to thrown exceptions.

2006-06-24  Roger Leigh  <rleigh@debian.org>

	* Move sbuild sources into an sbuild subdirectory, dchroot sources
	into a dchroot subdirectory and dchroot-dsa sources into a
	dchroot-dsa subdirectory.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* The include order of all includes has been reviewed.  Local
	headers are included first to detect missing includes.  C++
	headers are used instead of C headers.

	* All sources include only the headers they need, rather than
	using sbuild.h.

	* schroot/sbuild.h: Remove.

	* schroot/sbuild-types.h: date operator << uses "%b" rather than
	"%B" in the date format string.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document dchroot compatibility fixes.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-main.cc, schroot/schroot-listmounts.cc,
	schroot/schroot-releaselock.cc: Add date to version output.

	* schroot/sbuild-types.h: Define a date class to format dates for
	output.

	* bootstrap: Generate m4/schroot_release.m4 with a unix time.

	* scripts/schroot_release.m4.in: Define RELEASE_DATE as a unix
	time.

	* debian/changelog: Update rules.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* test/Makefile.am
	(TESTS): Remove sbuild-lock, because it can fail randomly on slow
	or heavily loaded systems due to timing constraints.

	* bootstrap: Create m4 directory if it doesn't exist.

	* Makefile.am
	(dist-hook): Remove junk from distdir such as temorary files.
	(EXTRA_DIST): Distribute bootstrap and m4 macros and templates.

	* configure.ac: Add checks for find and xargs.

2006-06-23  Roger Leigh  <rleigh@debian.org>

	* API documentation additions.

	* Add @RELEASE_DATE@ in place of hard-coded date in all manual
	pages.
