@@ -53,13 +53,13 @@ namespace sbuild
     /// Error codes.
     enum error_code
       {
-	CHROOT,     ///< No such chroot.
-	DIR_OPEN,   ///< Failed to open directory.
-	FILE_NOTREG ///< File is not a regular file.
-	FILE_OPEN,  ///< Failed to open file.
-	FILE_OWNER, ///< File is not owned by user root.
-	FILE_PERMS, ///< File has write permissions for others.
-	FILE_STAT,  ///< Failed to stat file.
+	CHROOT,      ///< No such chroot.
+	DIR_OPEN,    ///< Failed to open directory.
+	FILE_NOTREG, ///< File is not a regular file.
+	FILE_OPEN,   ///< Failed to open file.
+	FILE_OWNER,  ///< File is not owned by user root.
+	FILE_PERMS,  ///< File has write permissions for others.
+	FILE_STAT    ///< Failed to stat file.
       };
 
     /// Exception type.
